; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_gx.c_GX_LoadPosMtxImm.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_gx.c_GX_LoadPosMtxImm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@wgPipe = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @GX_LoadPosMtxImm(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @_SHIFTL(i32 %5, i32 2, i32 8)
  %7 = or i32 0, %6
  %8 = call i32 @GX_LOAD_XF_REGS(i32 %7, i32 12)
  %9 = load i32, i32* %3, align 4
  %10 = load i64, i64* @wgPipe, align 8
  %11 = inttoptr i64 %10 to i8*
  %12 = call i32 @WriteMtxPS4x3(i32 %9, i8* %11)
  ret void
}

declare dso_local i32 @GX_LOAD_XF_REGS(i32, i32) #1

declare dso_local i32 @_SHIFTL(i32, i32, i32) #1

declare dso_local i32 @WriteMtxPS4x3(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
